--- a/drugi_projekt/Drugi_Projekt_dialog_base.ui
+++ b/drugi_projekt/Drugi_Projekt_dialog_base.ui
@@ -16,7 +16,7 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>20</x>
      <y>240</y>
      <width>341</width>
      <height>32</height>
@@ -29,40 +29,79 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_zlicz_elementy">
+  <widget class="QRadioButton" name="radioButton_pole">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>80</y>
-     <width>75</width>
-     <height>23</height>
+     <x>100</x>
+     <y>170</y>
+     <width>111</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>zlicz elementy</string>
+    <string>pole powierzchni</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_lb_elementow">
+  <widget class="QRadioButton" name="radioButton_przewyzszenia">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>100</y>
-     <width>131</width>
-     <height>21</height>
+     <x>100</x>
+     <y>140</y>
+     <width>121</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Przewyższenia</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>50</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Wybierz aktywna warstwe</string>
    </property>
   </widget>
   <widget class="QgsMapLayerComboBox" name="mMapLayerComboBox">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>160</y>
+     <x>100</x>
+     <y>80</y>
      <width>160</width>
      <height>27</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="zlicz_elementy">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>230</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Zlicz elementy</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="zlicz_elementy_wynik">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>260</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
